tests/baselines/reference/for-of2.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of2.ts(1,7): error TS1155: 'const' declarations must be initialized.
tests/cases/conformance/es6/for-ofStatements/for-of2.ts(2,6): error TS2540: Cannot assign to 'v' because it is a constant or a read-only property.
tests/cases/conformance/es6/for-ofStatements/for-of2.ts(2,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of2.ts (3 errors) ====
    const v;
          ~
!!! error TS1155: 'const' declarations must be initialized.
    for (v of []) { }
         ~
!!! error TS2540: Cannot assign to 'v' because it is a constant or a read-only property.
              ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.